compiler/test/compilable/dtoh_18015.d
/*
REQUIRED_ARGS: -HC -c -o-
PERMUTE_ARGS:
TEST_OUTPUT:
---
// Automatically generated by Digital Mars D Compiler

#pragma once

#include <assert.h>
#include <math.h>
#include <stddef.h>
#include <stdint.h>

struct BitArray final
{
    typedef size_t Chunk_t;
    size_t len;
    size_t* ptr;
    BitArray() :
        len(),
        ptr()
    {
    }
    BitArray(size_t len, size_t* ptr = nullptr) :
        len(len),
        ptr(ptr)
        {}
};

typedef ptrdiff_t MyDiff;

---
*/

// https://github.com/dlang/dmd/issues/18015
// dtoh: Insufficient size_t/ptrdiff_t detection

extern(C++):

struct BitArray
{
    alias Chunk_t = size_t;
    size_t len;
    size_t* ptr;
}

alias MyDiff = ptrdiff_t;
